<resources>
    <string name="app_name">Quentinhas</string>

    <string name="title_login">Login</string>
    <string name="email_login">E-mail</string>
    <string name="password_login">Senha</string>
    <string name="btn_login">Entrar</string>

    <string name="btn_register_main">Cadastre-se</string>
    <string name="btn_login_main">Login</string>

    <string name="title_register">Cadastro</string>
    <string name="btn_register_provider">Fornecedor</string>
    <string name="btn_register_client">Cliente</string>

    <string name="title_register_provider">Cadastro Fornecedor</string>
    <string name="register_provider_restaurant">Restaurante</string>
    <string name="hint_register_provider_restaurant">Nome do Restaurante</string>
    <string name="register_provider_name">Nome</string>
    <string name="hint_register_provider_name">Seu nome</string>
    <string name="register_provider_email">E-mail</string>
    <string name="hint_register_provider_email">Seu e-mail</string>
    <string name="register_provider_phone">Telefone</string>
    <string name="hint_register_provider_phone">Seu telefone</string>
    <string name="register_provider_password">Senha</string>
    <string name="hint_register_provider_password">Sua senha</string>

    <string name="title_register_client">Cadastro Cliente</string>
    <string name="register_client_name">Nome</string>
    <string name="hint_register_client_name">Seu nome</string>
    <string name="register_client_email">E-mail</string>
    <string name="hint_register_client_email">Seu e-mail</string>
    <string name="register_client_phone">Telefone</string>
    <string name="hint_register_client_phone">Seu telefone</string>
    <string name="register_client_password">Senha</string>
    <string name="hint_register_client_password">Sua senha</string>

    <string name="btn_save_register">Cadastrar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="action_config">Configurações</string>
    <string name="action_sign_out">Sair da conta</string>
    <string name="action_waste">Gráficos</string>
    <string name="title_home">Início</string>
    <string name="title_menus">Cardápios</string>
    <string name="title_profile">Perfil</string>

    <string name="title_card_1_profile_provider">Dados pessoais</string>
    <string name="field_1_card_1_profile_provider">Restaurante</string>
    <string name="field_2_card_1_profile_provider">Nome</string>
    <string name="field_3_card_1_profile_provider">E-mail</string>
    <string name="field_4_card_1_profile_provider">Telefone</string>
    <string name="btn_save">Salvar</string>
    <string name="btn_cancel">Cancelar</string>

    <string name="title_card_2_profile_provider">Trocar senha</string>
    <string name="field_1_card_2_profile_provider">Clique aqui para trocar a sua senha.\nEnviaremos um email para
        você.
    </string>

    <string name="title_card_1_config_provider">Formas de pagamento</string>
    <string name="toggle_cash">Em espécie</string>
    <string name="toggle_pagseguro">PagSeguro</string>
    <string name="title_card_2_config_provider">Horário encerramento pedidos</string>
    <string name="title_card_3_config_provider">Horário previsto para chegada</string>
    <string name="title_card_4_config_provider">Local de entrega</string>

    <string name="title_configurations">Configurações</string>

    <string name="btn_more_details_menu">Mais</string>

    <string name="title_new_menu">Novo Cardápio</string>
    <string name="title_edit_new_menu">Nome: Cardápio</string>
    <string name="proteins">Proteínas</string>
    <string name="protein">Proteína</string>
    <string name="sides">Acompanhamentos</string>
    <string name="sizes">Tamanhos</string>
    <string name="size">Tamanho</string>
    <string name="hint_sizes">Tamanho / preço. Exemplo: Grande / R$10,00</string>

    <string name="btn_schedule">Agendar</string>
    <string name="btn_edit">Editar</string>

    <string name="edit_menu_title">Editar Cardápio</string>

    <string name="text_example">Pequena / R$4,00</string>
    <string name="btn_more_details_order">Detalhes do pedido</string>

    <string name="welcome">Bem vindo(a),</string>
    <string name="welcome_restaurant">Restaurante</string>

    <string name="orders_received">Pedidos recebidos do dia</string>
    <string name="title_requests">Pedidos</string>

    <string name="toolbar_order_title">Pedido</string>

    <string name="title_request">Fazer Pedido</string>
    <string name="choose_restaurant">Escolha o fornecedor</string>
    <string name="choose_menu">Escolha o cardápio</string>
    <string name="no_menu">Infelizmente esse fornecedor não possui cardápios para o dia de hoje!</string>
    <string name="select">Continuar</string>
    <string name="choose_size">Escolha o tamanho da quentinha</string>
    <string name="choose_protein">Escolha a proteína</string>
    <string name="choose_sides">Escolha os acompanhamentos</string>
    <string name="choose_sides_maximum">Escolha no máximo 3</string>
    <string name="write_notes">Observações</string>
    <string name="hint_notes">Molho a parte? Retirar algum ingrediente?\nEscreva aqui!</string>
    <string name="choose_payment">Escolha a forma de pagamento</string>
    <string name="title_send_order">Confirmação de pedido</string>

    <string name="notes">Observações</string>
    <string name="payment_method">Método de pagamento</string>
    <string name="btn_confirm">Confirmar</string>

    <string name="my_orders">Pedidos recentes</string>

    <string name="no_orders_provider">Ainda não há pedidos feitos hoje, lembre-se de agendar o(s) cardápio(s) que você
        deseja que seja(m) liberado(s)!\nAguarde que quando houver pedidos eles aparecerão nessa tela.
    </string>
    <string name="no_orders_client">Você ainda não realizou nenhum pedido.\nQuando realizar eles aparecerão nessa
        tela.
    </string>
    <string name="delivered">Entregue</string>
    <string name="xAxis">Dia da semana</string>
    <string name="yAxis">Quantidade de quentinhas</string>
    <string name="sunday">Dom</string>
    <string name="monday">Seg</string>
    <string name="tuesday">Ter</string>
    <string name="wednesday">Qua</string>
    <string name="thursday">Qui</string>
    <string name="friday">Sex</string>
    <string name="saturday">Sáb</string>
    <string name="chart_orders">Quantidade de quentinhas recebidas por dia da semana</string>
    <string name="chart_delivered">Quantidade de quentinhas entregues por dia da semana</string>
    <string name="chart_wasted">Quantidade de quentinhas desperdiçadas por dia da semana</string>

    <string name="btn_orders">Pedidos Recebidos</string>
    <string name="btn_delivered">Pedidos Entregues</string>
    <string name="btn_wasted">Pedidos desperdiçados</string>

    <string name="choose_chart">Escolha qual gráfico você gostaria de ver agora.\nO primeiro mostra o total de pedidos
        recebidos, \no segundo mostra o total de pedidos que foram de fato entregues \ne o terceiro mostra o total de
        pedidos que, infelizmente, não foram entregues, sendo, assim, desperdiçados.\nTodos separados por dia da semana.
    </string>
    <string name="title_charts">Gráficos</string>
    <string name="title_chart">Gráfico</string>

    <string name="no_provider">Infelizmente ainda não há fornecedores com cardápios disponíveis nesse horário!</string>

</resources>
