<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".provider.ProviderRegisterActivity">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_register_provider"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorWhite"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

            <TextView
                    android:id="@+id/toolbar_register_provider_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/title_register_provider"
                    android:fontFamily="@font/amiko_bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp"/>

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>


    <RelativeLayout
            android:id="@+id/register_provider_restaurant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="15dp"
            android:layout_centerVertical="true"
            android:paddingStart="18dp"
            android:paddingEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_register_provider">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_alignParentStart="true"
                android:text="@string/register_provider_restaurant"
                android:fontFamily="@font/amiko"/>
        <EditText
                android:id="@+id/edit_register_provider_restaurant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="200dp"
                android:inputType="text"
                android:layout_centerVertical="true"
                android:textSize="12sp"
                android:textColor="@color/colorPrimary"
                android:layout_alignParentEnd="true"
                android:hint="@string/hint_register_provider_restaurant"
                android:fontFamily="@font/amiko"/>

    </RelativeLayout>
    <RelativeLayout
            android:id="@+id/register_provider_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="15dp"
            android:layout_centerVertical="true"
            android:paddingStart="18dp"
            android:paddingEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/register_provider_restaurant">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_alignParentStart="true"
                android:text="@string/register_provider_name"
                android:fontFamily="@font/amiko"/>
        <EditText
                android:id="@+id/edit_register_provider_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="200dp"
                android:inputType="text"
                android:layout_centerVertical="true"
                android:textSize="12sp"
                android:textColor="@color/colorPrimary"
                android:layout_alignParentEnd="true"
                android:hint="@string/hint_register_provider_name"
                android:fontFamily="@font/amiko"/>

    </RelativeLayout>
    <RelativeLayout
            android:id="@+id/register_provider_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="15dp"
            android:layout_centerVertical="true"
            android:paddingStart="18dp"
            android:paddingEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/register_provider_name">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_alignParentStart="true"
                android:text="@string/register_provider_email"
                android:fontFamily="@font/amiko"/>
        <EditText
                android:id="@+id/edit_register_provider_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="200dp"
                android:inputType="textEmailAddress"
                android:layout_centerVertical="true"
                android:textSize="12sp"
                android:textColor="@color/colorPrimary"
                android:layout_alignParentEnd="true"
                android:hint="@string/hint_register_provider_email"
                android:fontFamily="@font/amiko"/>

    </RelativeLayout>
    <RelativeLayout
            android:id="@+id/register_provider_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="15dp"
            android:layout_centerVertical="true"
            android:paddingStart="18dp"
            android:paddingEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/register_provider_email">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_alignParentStart="true"
                android:text="@string/register_provider_phone"
                android:fontFamily="@font/amiko"/>
        <EditText
                android:id="@+id/edit_register_provider_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="200dp"
                android:inputType="phone"
                android:layout_centerVertical="true"
                android:textSize="12sp"
                android:textColor="@color/colorPrimary"
                android:layout_alignParentEnd="true"
                android:hint="@string/hint_register_provider_phone"
                android:fontFamily="@font/amiko"/>

    </RelativeLayout>
    <RelativeLayout
            android:id="@+id/register_provider_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="15dp"
            android:layout_centerVertical="true"
            android:paddingStart="18dp"
            android:paddingEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/register_provider_phone">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_alignParentStart="true"
                android:text="@string/register_provider_password"
                android:fontFamily="@font/amiko"/>
        <EditText
                android:id="@+id/edit_register_provider_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="200dp"
                android:inputType="textPassword"
                android:layout_centerVertical="true"
                android:textSize="12sp"
                android:textColor="@color/colorPrimary"
                android:layout_alignParentEnd="true"
                android:hint="@string/hint_register_provider_password"
                android:fontFamily="@font/amiko"/>

    </RelativeLayout>
    <ProgressBar
            android:id="@+id/progress_bar_provider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@+id/register_provider_password"
            app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:id="@+id/btn_register_provider"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_save_register"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorWhite"
            android:layout_marginEnd="25dp"
            app:layout_constraintTop_toBottomOf="@+id/register_provider_password"
            app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>