<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".provider.ChartsActivity">
    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_charts"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorWhite"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/title_charts"
                    android:fontFamily="@font/amiko_bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp"/>

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar_charts"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:text="@string/choose_chart"/>

            <Button
                    android:id="@+id/go_chart_orders"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_gravity="center"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/colorWhite"
                    android:text="@string/btn_orders"/>
            <Button
                    android:id="@+id/go_chart_delivered"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_gravity="center"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/colorWhite"
                    android:text="@string/btn_delivered"/>
            <Button
                    android:id="@+id/go_chart_wasted"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_gravity="center"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/colorWhite"
                    android:text="@string/btn_wasted"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>