<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="55sp"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="@font/amiko_bold"
                android:layout_marginTop="70dp"
                android:layout_gravity="center_horizontal"/>

        <Button
                android:id="@+id/btn_register_main"
                android:layout_marginTop="40dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_register_main"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorWhite"
                android:layout_gravity="center_horizontal"/>

        <Button
                android:id="@+id/btn_login_main"
                android:layout_marginTop="10dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_login_main"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorWhite"
                android:layout_gravity="center_horizontal"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>